# libmv

./: README  README.txt  TODO  sconstruct
branches/libmv-eigen3/src/: CMakeLists.txt
branches/libmv1/: .bzrignore
branches/libmv1/doc/: bloch_api_design_notes.txt  preliminary_api.txt
branches/libmv1/include/: align.h  camera.h  config.h  feature.h  ground_truth.h  json_numeric.h  keyframe.h  mv_util.h  nviewtriangulate.h  reconstruction.h  resection_reconstruction.h  robust_sixpointnview.h  structure.h
branches/libmv1/scripts/: Makefile  reconstruct_avi
branches/libmv1/src/: _mv.cpp  euclidean_upgrade_coeffs.cpp  ground_truth.cpp  matrix.cpp  mv.cpp  mv_util.cc  nviewtriangulate.cc  optimization.cpp  radial.cc  resection_reconstruction.cc  rpoly.cpp  test_copy.cpp
branches/libmv1/test/: generatedata.py  make_resection_data.py  make_test_gric_data.py  test_align.cc  test_config.cc  test_eval.cc  test_linear.cc  test_mv.cc  test_mv.py  test_nviewtriangulate.cc  test_ransac.cc  (+7 more)
branches/new_gflags_glog_dasy/src/libmv/descriptor/: CMakeLists.txt
branches/pau/src/: CMakeLists.txt  Doxyfile
branches/pau/src/dense/: CMakeLists.txt  Camera.h  Image.cc  MiddleburyData.cc  MiddleburyData.h  PlaneSweepStereo.h  PlaneSweepStereoGPU.h
branches/pau/src/dense/shaders/: AgregateScoreZNCCShader.h  ConvolutionShader.frag  ConvolutionShader.h  PlaneSweepShader.frag  PlaneSweepShader.h  PlaneSweepShader.vert  UpdateBestDepthShader.frag  WarpImageNCCShader.vert  WarpImageSDShader.frag  WarpImageSDShader.h  WarpImageShader.frag
branches/pau/src/dense/tests/: CMakeLists.txt  test_Camera.cc  test_MiddleburyData.cc  test_PlaneSweepStereoGPU.cc
branches/pau/src/opengl/: CMakeLists.txt  Pbuffer.cc  Pbuffer.h  ShaderProgram.h  opengl.cc  opengl.h
branches/pau/src/opengl/tests/: CMakeLists.txt  TestShader.h  TestShader.vert  test_Pbuffer.cc  test_ShaderProgram.cc
branches/pau/src/sparse/: CMakeLists.txt  Frame.cc  Frame.h  PointFeature.cc  PointFeature.h  PointTrack.cc  PointTrack.h  SiftFeature.cc  SiftFeature.h  TrackedSequence.cc  TwoViewMatches.cc  TwoViewMatches.h
branches/pau/src/sparse/testTrackedSequence/: TSWidget.cc  TSWidget.h  Window.cc  main.cc
branches/pau/src/ui/: CMakeLists.txt  MultiImageViewer.cc
branches/pau/src/ui/examples/: CMakeLists.txt  MultiImageViewer_example.cc  multi_view_stereo_viewer_example.cc
doc/: libmv.dox
include/: em_fit.h  mv.h  radial.h  ransac.h  resection.h  sixpointnview.h  unscented.h
scripts/: calc_truth.py  cc_from_shader.py  deuglify-errors.sh  do_sequence.sh  euc_upgr_derivation.mc  maxima.py  track_video.makefile
src/: CMakeLists.txt  align.cpp  camera.cpp  config.cc  em_fit.cpp  eval.cpp  feature.cpp  homography.cpp  json_numeric.cc  keyframe.cc  linear.cpp  ransac.cpp  reconstruction.cc  resection.cc  robust_sixpointnview.cc  sixpointnview.cc  structure.cc  track.cpp
src/dense/: Camera.cc  Camera.h  Image.h  MiddleburyData.cc  PlaneSweepStereo.cc  PlaneSweepStereo.h  PlaneSweepStereoGPU.cc  PlaneSweepStereoGPU.h
src/dense/shaders/: AgregateScoreZNCCShader.frag  CMakeLists.txt  ConvolutionRGBAShader.frag  ConvolutionRGBAShader.h  GrayScaleAndSquareShader.frag  GrayScaleAndSquareShader.h  PushInSortedListShader.frag  PushInSortedListShader.h  UpdateBestDepthShader.frag  UpdateBestDepthShader.h  WarpImageNCCShader.frag  WarpImageNCCShader.h  WarpImageShader.h
src/dense/tests/: CMakeLists.txt  test_PlaneSweepStereoGPU.cc
src/libmv/correspondence/: klt.cc  klt.h
src/libmv/multiview/: CMakeLists.txt  affine_2d_test.cc  camera_jacobian.h  camera_optimize_functor.h  camera_parameterization_test.cc  euclidean_parameterization.h  euclidean_resection.h  homography.cc~  homography_error.h  homography_jacobian.h  homography_jacobian_test.cc  projection_error.h  rotation_jacobian.h  structure_jacobian.h  structure_optimize.h  test_data_sets.h
src/opengl/: FramebufferObject.cc  FramebufferObject.h  ShaderProgram.cc  opengl.cc
src/opengl/tests/: CMakeLists.txt  TestShader.frag  TestShader.h  test_FramebufferObject.cc
src/sparse/: Frame.cc  Frame.h  PointMatch.cc  PointMatch.h  SiftFeature.h  TrackedSequence.h  TwoViewMatches.cc
src/sparse/testTrackedSequence/: CMakeLists.txt  TSWidget.cc  Window.h  main.cc
src/tools/: mosaicing_video.cc
src/ui/: CMakeLists.txt  MultiImageViewer.cc  MultiImageViewer.h  multi_view_stereo_viewer.cc  multi_view_stereo_viewer.h
src/ui/examples/: CMakeLists.txt  MultiImageViewer_example.cc
test/: make_align_data.py  make_nviewtriangulate_data.py  make_robust_sixpointnview_data.py  make_sixpointnview_data.py  make_uklt_data_manual.py  test_camera.cc  test_em_fit.cc  test_feature.cc  test_gric.cc  test_gric_data.h  test_ground_truth.cc  test_io.cc  test_json_numeric.cc  test_klt.cc  test_matrix.cc  test_optimization.cc  test_radial.cc  test_runner.cc  test_sixpointnview.cc  test_tracked_sequence_data.h  test_uklt.cc
utils/: correct_radial_distortion.cc  dump_track_to_ascii.cc  eval_reconstruction.cc  export_blender.cc  exr_to_numpy.cc  merge_subsets.cc  plot_evaluation.py  plot_track_evaluation.py  print_reconstruction.cc  print_track.cc  resection.cc  track_sequence.cc
wiki/: ApacheLicenseBoilerplate.wiki  ApplicationsAndTools.wiki  AutoCalibration.wiki  Bibliography.wiki  Blender2DTrackerPlan.wiki  BlenderGSoC2011.wiki  BlenderProjects.wiki  BrainstormingOrganizationAndPlanning.wiki  BundleAdjustment.wiki  ChangeLog.wiki  CodeBlocksSetupLibMV.wiki  CodingPractices.wiki  CompileQTProjectOnWindows.wiki  CompileQtProjectOnWindows.wiki  CorrespondenceLibrary.wiki  DesignOfVectorLibrary.wiki  FeaturePlan.wiki  GSoC2011.wiki  Goals.wiki  ImageLibrary.wiki  Libmv1Retrospective.wiki  MITLicenseBoilerplate.wiki  MajorComponents.wiki  MatrixLibrary.wiki  MinimizationLibrary.wiki  ReconstructionWalkthrough.wiki  RelatedProjects.wiki  Roadmap.wiki  SerializationLibrary.wiki  SideBar.wiki  SourceCode.wiki  StartingGuide.wiki  SurfImplementation.wiki  ThingsPauUsesFromVxl.wiki  ThirdPartyCode.wiki  WideBaselineMatching.wiki  WorkPlan.wiki  WorkPlanJulien.wiki  WorkPlanKeir.wiki  WorkPlanPau.wiki  (+2 more)
(+38 files in other folders)
